--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Marck+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
 .Nav
 {
   display: flex;
@@ -31,11 +32,14 @@
 body
 {
 /* background-color: rgba(59, 55, 55, 0.938); */
-background: linear-gradient(to left, rgb(195, 20, 50), rgb(36, 11, 54));
+/* background: linear-gradient(to left, rgb(195, 20, 50), rgb(36, 11, 54)); */
+ background-color: #0b032d; 
+   /* background: linear-gradient(to right, rgb(15, 32, 39), rgb(32, 58, 67), rgb(44, 83, 100)); */
+
 }
 .Heading
 {
-  color: rgb(219, 107, 189);
+  color: #f67e7d;
   display: flex;
   justify-content: center;
   margin-bottom: 15%;
@@ -58,7 +62,7 @@ background: linear-gradient(to left, rgb(195, 20, 50), rgb(36, 11, 54));
 }
 .About
 {
-  color: aliceblue;
+  color: #713045;
 }
 .content
 {
@@ -74,28 +78,40 @@ background: linear-gradient(to left, rgb(195, 20, 50), rgb(36, 11, 54));
    margin-top: 10%;
    margin-left: 30%;
    border: 5px solid  rgb(36, 11, 54);
+
 }
 .project-name {
-  color: white;
-  width: 70%;
+  /* color: white;*/
+  width: 50%; 
+  margin: 100px auto;
   display: flex;
+  justify-content: center;
+
+
+  /* display: flex;
   align-items: center;
   justify-content: space-around;
-  flex-wrap: wrap;
-  margin-left: 15%;
-  margin-top: 10%;
+  flex-wrap: wrap; */
+  /* margin-left: 15%;
+  margin-top: 10%; */
 }
+
+.project-container{
+  margin: 0px auto;
+}
+
+
 .project-name div {
    
-  border: 20px solid rgb(235, 187, 232);
+  /* border: 20px solid rgb(235, 187, 232);
   color: rgb(235, 187, 232);
   border-width: 5px;
-  
-  /* margin-bottom:20%; */
-  margin:3%;
-  height:200px;
-  width: 200px;
   border-radius: 100px;
+   */
+  /* margin-bottom:20%; */
+  /* margin:3%; */
+  /* height:200px; */
+  width: 100%;
 }
 .Nav ul div::after{
   content: "";
@@ -112,7 +128,7 @@ background: linear-gradient(to left, rgb(195, 20, 50), rgb(36, 11, 54));
 width: 50%;
 
 }
-.Heading1::after{
+/* .Heading1::after{
   content: "";
   position: absolute;
   height: 2px;
@@ -121,18 +137,20 @@ width: 50%;
   border-bottom: 4px solid rgb(240, 162, 220);
   border-radius: 100px;
   transition: all .35s ease-in-out;
-}
+} */
 .pics {
   height:200px;
   width:200px;
-  border-radius : 95px;
+  /* margin: 0 40px; */
+  /* border-radius : 95px; */
 }
 .Space {
   margin: 10%;
 }
 .Contact-full{
 
-  background: rgb(36, 11, 54);
+  background: rgb(36, 11, 54); 
+  /* background: #5f0d27; */
 
 }
 .Contact-head {
@@ -151,9 +169,9 @@ width: 50%;
   margin-top: 8%;
   margin-bottom: 8%;
 }
-/* .Icons {
-  margin-top: 5%;
-} */
+ .Icons {
+  /* margin-top: 5%; */
+} 
 .Email {
   font-size: 24px;
   
@@ -182,7 +200,8 @@ width: 50%;
 }
 .Designer {
   color:#a75377;
-  background-color: rgb(36, 11, 54);
+  background-color: rgb(36, 11, 54); 
+ 
   padding: 3% 11%;
   margin-top: 3%;
   text-align: center;
